--- a/SosD/Views/Home/Index.cshtml
+++ b/SosD/Views/Home/Index.cshtml
@@ -1,8 +1,36 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<body>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="Home">
+
+        <img src="~/images/logoSosD.png" alt="Logo SOS-D"class="imagen"/>
+       
+    </div>
+
+</body>
+
+
+<style>
+    body {
+        
+    }
+
+    .Home {
+        
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        text-align: center;
+    }
+    .imagen {
+        width: 100%;
+        height: auto;
+        max-width: 100%; 
+        margin: 0 auto; 
+    }
+
+</style>
