--- a/SosD/Views/Presupuesto/Index.cshtml
+++ b/SosD/Views/Presupuesto/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 style="font-family:Impact,Arial;">Presupuestos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear un nuevo presupuesto</a>
 </p>
-<table class="table">
+<table class="table" style="box-shadow: 10px 10px 5px lightgrey;">
     <thead>
         <tr>
             <th>
