add excel feature

--- a/SosD/Views/Diseño/Index.cshtml
+++ b/SosD/Views/Diseño/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SosD.Models.Diseño>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Diseños";
 }
 
 <h1 style ="font-family:Impact,Arial;">Diseños</h1>
 
 <p>
-    <a asp-action="Create">Agregar nuevo diseño</a>
+    <a asp-action="Create" class="btn btn-dark">Agregar nuevo diseño</a>
 </p>
 <table class="table" style="box-shadow: 10px 10px 5px lightgrey;">
     <thead>
