--- a/SosD/Views/Presupuesto/Index.cshtml
+++ b/SosD/Views/Presupuesto/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SosD.Models.Presupuesto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Presupuestos";
 }
 
 <h1 style="font-family:Impact,Arial;">Presupuestos</h1>
 
 <p>
-    <a asp-action="Create">Crear un nuevo presupuesto</a>
+    <a asp-action="Create" class="btn btn-dark">Crear un nuevo presupuesto</a>
 </p>
 <table class="table" style="box-shadow: 10px 10px 5px lightgrey;">
     <thead>
