--- a/SosD/Views/TipoTelas/Index.cshtml
+++ b/SosD/Views/TipoTelas/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SosD.Models.TipoTela>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tipos de Tela";
 }
 
-<h1 style="font-family:Impact,Arial;">Tipos de Telas</h1>
+<h1 style="font-family:Impact,Arial;">Tipos de Tela</h1>
 
 <p>
-    <a asp-action="Create">Agregar nuevo tipo de tela</a>
+    <a asp-action="Create" class="btn btn-dark">Agregar nuevo tipo de tela</a>
 </p>
 <table class="table" style="box-shadow: 10px 10px 5px lightgrey;">
     <thead>
