--- a/SosD/Views/TipoPrendas/Index.cshtml
+++ b/SosD/Views/TipoPrendas/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SosD.Models.TipoPrenda>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tipos de Prenda";
 }
 
 <h1 style="font-family:Impact,Arial;">Tipos de Prenda</h1>
 
 <p>
-    <a asp-action="Create">Agregar un tipo de prenda</a>
+    <a asp-action="Create" class="btn btn-dark">Agregar un tipo de prenda</a>
 </p>
 <table class="table" style="box-shadow: 10px 10px 5px lightgrey;">
     <thead>
